tree-sitter-cabal/test/corpus/sandi.txt
================================================================================
Real Cabal file - sandi
================================================================================

cabal-version:      1.12

-- This file has been generated from package.yaml by hpack version 0.31.1.
--
-- see: https://github.com/sol/hpack
--
-- hash: 6183f2dd5fde1b5f89e8c5599ef0b4457280d17a3b0126ef21c0f541cc780473

name:               sandi
version:            0.5
x-revision:         1
synopsis:           Data encoding library
description:        Reasonably fast data encoding library.
category:           Codec, Conduit
maintainer:         Magnus Therning <magnus@therning.org>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  csrc/codec.h
  package.yaml

source-repository head
  type:     git
  location: https://github.com/magthe/sandi.git

flag with-conduit
  manual:  True
  default: True

library
  exposed-modules:
    Codec.Binary.Base16
    Codec.Binary.Base32
    Codec.Binary.Base32Hex
    Codec.Binary.Base64
    Codec.Binary.Base64Url
    Codec.Binary.Base85
    Codec.Binary.QuotedPrintable
    Codec.Binary.Uu
    Codec.Binary.Xx
    Codec.Binary.Yenc

  other-modules:    Paths_sandi
  hs-source-dirs:   src
  cc-options:       -fPIC -Wall -Wextra
  c-sources:        csrc/codec.c
  build-depends:
      base        <5
    , bytestring

  if flag(with-conduit)
    exposed-modules:
      Data.Conduit.Codec.Base16
      Data.Conduit.Codec.Base32
      Data.Conduit.Codec.Base32Hex
      Data.Conduit.Codec.Base64
      Data.Conduit.Codec.Base64Url
      Data.Conduit.Codec.Base85
      Data.Conduit.Codec.QuotedPrintable
      Data.Conduit.Codec.Uu
      Data.Conduit.Codec.Xx
      Data.Conduit.Codec.Yenc

    other-modules:   Data.Conduit.Codec.Util
    build-depends:
        conduit     >=1.3
      , exceptions

  default-language: Haskell2010

test-suite sandi-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Codec.Binary.Base16Test
    Codec.Binary.Base32HexTest
    Codec.Binary.Base32Test
    Codec.Binary.Base64Test
    Codec.Binary.Base64UrlTest
    Codec.Binary.Base85Test
    Codec.Binary.QuotedPrintableTest
    Codec.Binary.UuTest
    Codec.Binary.XxTest
    Codec.Binary.YencTest
    Codec.TestUtils
    Paths_sandi

  hs-source-dirs:   test-src
  build-depends:
      base
    , bytestring
    , sandi
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-th

  default-language: Haskell2010

benchmark sandi-bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Codec.Binary.Base16Bench
    Codec.Binary.Base32Bench
    Codec.Binary.Base32HexBench
    Codec.Binary.Base64Bench
    Codec.Binary.Base64UrlBench
    Codec.Binary.Base85Bench
    Codec.Binary.QuotedPrintableBench
    Codec.Binary.UuBench
    Codec.Binary.XxBench
    Codec.Binary.YencBench
    Paths_sandi

  hs-source-dirs:   bench-src
  build-depends:
      base
    , bytestring
    , criterion
    , sandi

  default-language: Haskell2010

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (version)))
    (field
      (field_name)
      (field_value
        (integer)))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (constraint_op)
        (identifier)
        (text_fragment)
        (constraint_op)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (path)
        (identifier))))
  (sections
    (source_repository
      (section_type)
      (section_name)
      (property_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (url)))))
    (flag
      (section_type)
      (section_name)
      (property_block
        (field
          (field_name)
          (field_value
            (boolean)))
        (field
          (field_name)
          (field_value
            (boolean)))))
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (flag_token)
            (flag_token)
            (flag_token)))
        (field
          (field_name)
          (field_value
            (path)))
        (field
          (field_name)
          (field_value
            (identifier)
            (constraint_op)
            (integer)
            (identifier)))
        (conditional
          (if_clause
            (predicate_call
              (identifier)
              (predicate_arg
                (identifier)))
            (property_or_conditional_block
              (field
                (field_name)
                (field_value
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)
                  (module_name)))
              (field
                (field_name)
                (field_value
                  (module_name)))
              (field
                (field_name)
                (field_value
                  (identifier)
                  (constraint_op)
                  (version)
                  (identifier))))))
        (field
          (field_name)
          (field_value
            (identifier)))))
    (test_suite
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))))
    (benchmark
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (module_name)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier)))))))
