tree-sitter-cabal/test/corpus/sections.txt
================================================================================
Common section
================================================================================

cabal-version : 3.4
name: name-of-package

common base
  field: value

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Library section (without name)
================================================================================

cabal-version : 3.4
name: pkg-foo

library
  foo: hello

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
Library section (with name)
================================================================================

cabal-version : 3.4
name: pkg-foo

library named-lib
  foo: hello

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (field_name)
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))
