tree-sitter-cabal/test/corpus/small-packages.txt
================================================================================
Library and executable
================================================================================

cabal-version : 3.4
name: pkg-foo

library
  foo: hello

executable foo
  bar: good bye

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)))))))
