tree-sitter-cabal/test/corpus/unicode.txt
================================================================================
Unicode field name
================================================================================

x-無: value

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))))

================================================================================
Unicode in a section name
================================================================================

common Fünfstück
  build-depends: base

--------------------------------------------------------------------------------

(cabal
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
NBSP indentation in a section body
================================================================================

library
  build-depends: base

--------------------------------------------------------------------------------

(cabal
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (field
          (field_name)
          (field_value
            (identifier)))))))

================================================================================
NBSP indentation in a field continuation
================================================================================

description: line one
             line two

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))
